--- a/package.json
+++ b/package.json
@@ -10,16 +10,13 @@
     "start": "react-scripts start",
     "build": "react-scripts build"
   },
-  "author": "",
+  "author": "melissa",
   "license": "ISC",
   "dependencies": {
     "node-sass": "^4.14.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-scripts": "^3.4.1"
-  },
-  "devDependencies": {
-    "gh-pages": "^3.0.0"
   },
   "browserslist": {
     "production": [
@@ -32,5 +29,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^3.0.0"
   }
 }
